@@ -1,3 +1,7 @@
+2007-09-27  Vitaly Alexeev <tishka92@yahoo.com>
+		* gameswf/gameswf_object.*
+		Fixed as_object::watch()
+
 2007-09-26  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf.h
